# sqlid

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .stickler.yaml  Makefile  README.md  go.mod  go.sum  normalize.go  normalize_test.go  options.go  parity_test.go  sql-id.py  sql-id_test.sh  sqlid.go  sqlid.py  sqlid_test.go
.claude/: CLAUDE.md
cmd/sqlid/: main.go  main_test.go
docs/: architecture.md
internal/app/: app.go  app_test.go
internal/app/commands/identify/: command.go  command_test.go
internal/constants/: errors.go  errors_test.go  type.go
internal/domain/identify/: identify.go  identify_test.go
py/: README.md  pyproject.toml
py/src/sqlid/: __init__.py  cli.py  hashing.py  normalize.py
py/tests/: test_cli.py  test_hashing.py  test_normalize.py
scripts/: check-cognit.sh  check-coverage.sh  check-format.sh
testdata/: parity.json
