# pyproject.toml is the one format the Python packaging ecosystem mandates (PEP 518/621);
# no YAML/JSON alternative exists, so TOML is used here by necessity.
[project]
name = "sqlid"
version = "1.0.0"
description = "Compute an Oracle-style SQL ID that identifies equivalent queries regardless of WITH-clause aliases and literal constants."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = []

[project.scripts]
sqlid = "sqlid.cli:main"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlid"]

[tool.pytest.ini_options]
addopts = "--cov=sqlid --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]
pythonpath = ["src"]
